--- a/modules/process_cog/locale/fr_FR.po
+++ b/modules/process_cog/locale/fr_FR.po
@@ -6,10 +6,6 @@ msgctxt "error:ir.ui.view.description:"
 msgid "The functional id must be unique !"
 msgstr "L'identifiant fonctionnel doit être unique"
 
-msgctxt "error:process:"
-msgid "The current record (%s) will be deleted, are you sure you want to proceed ?"
-msgstr "L'enregistrement courant (%s) sera supprimé, êtes-vous certain de vouloir continuer ?"
-
 msgctxt "error:process.resume:"
 msgid "No active process found"
 msgstr "Pas de processus actif trouvé"
@@ -25,6 +21,13 @@ msgstr "Saisir les deux choix"
 msgctxt "error:process.transition:"
 msgid "Pyson expression and description is mandatory"
 msgstr "Expression Pyson et la description sont obligatoires"
+
+msgctxt "error:process:"
+msgid ""
+"The current record (%s) will be deleted, are you sure you want to proceed ?"
+msgstr ""
+"L'enregistrement courant (%s) sera supprimé, êtes-vous certain de vouloir "
+"continuer ?"
 
 msgctxt "field:ir.ui.view.description,create_date:"
 msgid "Create Date"
@@ -117,10 +120,6 @@ msgstr "Fermer l'onglet à la fin"
 msgctxt "field:process,complete_message:"
 msgid "Confirmation Message for Completion"
 msgstr "Message de confirmation final"
-
-msgctxt "help:process,complete_message:"
-msgid "A confirmation message that will be displayed when the user clicks the \"Terminate\" button at the end of the process"
-msgstr "Ce message est affiché à l'utilisateur pour confirmation lorsqu'il clique sur le bouton \"Terminer\" du processus"
 
 msgctxt "field:process,create_date_:"
 msgid "Creation date"
@@ -329,6 +328,14 @@ msgstr "Descriptin Pyson"
 msgctxt "field:process.transition,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
+
+msgctxt "help:process,complete_message:"
+msgid ""
+"A confirmation message that will be displayed when the user clicks the "
+"\"Terminate\" button at the end of the process"
+msgstr ""
+"Ce message est affiché à l'utilisateur pour confirmation lorsqu'il clique "
+"sur le bouton \"Terminer\" du processus"
 
 msgctxt "model:ir.action,name:act_end_process"
 msgid "End Process"
