--- a/modules/claim_credit/locale/fr_FR.po
+++ b/modules/claim_credit/locale/fr_FR.po
@@ -2,10 +2,10 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "field:contract.service,is_loan:"
+msgctxt "field:claim.service,is_loan:"
 msgid "Is loan"
-msgstr "Est emprunteur"
+msgstr "Emprunteur"
 
-msgctxt "field:contract.service,loan:"
+msgctxt "field:claim.service,loan:"
 msgid "Loan"
 msgstr "Prêt"
