commission_insurance : Add parent_line_start end parent_line_end on commissions
Fix #1644
review http://rietveld.coopengo.com/13310004

--- a/modules/commission_insurance/locale/fr_FR.po
+++ b/modules/commission_insurance/locale/fr_FR.po
@@ -60,6 +60,14 @@ msgctxt "field:commission,commissioned_option:"
 msgid "Commissioned Option"
 msgstr "Option commissionnée"
 
+msgctxt "field:commission,parent_line_end:"
+msgid "Line End"
+msgstr "Date de fin"
+
+msgctxt "field:commission,parent_line_start:"
+msgid "Line Start"
+msgstr "Date de début"
+
 msgctxt "field:commission,party:"
 msgid "Party"
 msgstr "Tiers"
