endorsement_insurance : remove option endorsement allows to void fix #2307 http://rietveld.coopengo.com/13350001/

--- a/modules/endorsement_insurance/locale/fr_FR.po
+++ b/modules/endorsement_insurance/locale/fr_FR.po
@@ -11,10 +11,22 @@ msgstr ""
 "garantie obligatoire est supprimée"
 
 msgctxt "error:contract.covered_element.option.remove:"
+msgid ""
+"You are ending an option the day it starts. Are you sure you want to have an"
+" option lasting only one day and not void it ?"
+msgstr ""
+"Vous résiliez une garantie le jour où elle commence. Êtes-vous sûr de "
+"vouloir une garantie qui dure un jour, plutôt qu'une garantie sans effet ?"
+
+msgctxt "error:contract.covered_element.option.remove:"
 msgid "You are setting an end date anterior to start date for option : \"%s\""
 msgstr ""
 "Vous définissez une date de fin antérieure à la date de début de l'option : "
 "\"%s\""
+
+msgctxt "error:contract.covered_element.option.remove:"
+msgid "You are voiding an option."
+msgstr "Vous changez une garantie en \"sans effet\"."
 
 msgctxt "error:contract.covered_element.option.remove:"
 msgid ""
@@ -192,6 +204,10 @@ msgctxt "field:contract.covered_element.option.remove,options:"
 msgid "Options To Remove"
 msgstr "Garanties à résilier"
 
+msgctxt "field:contract.covered_element.option.remove.option_selector,action:"
+msgid "Action"
+msgstr "Action"
+
 msgctxt ""
 "field:contract.covered_element.option.remove.option_selector,contract:"
 msgid "Contract"
@@ -211,6 +227,11 @@ msgctxt ""
 "field:contract.covered_element.option.remove.option_selector,covered_element_option_endorsement:"
 msgid "Covered Element Option Endorsement"
 msgstr "Avenant de modification des garanties"
+
+msgctxt ""
+"field:contract.covered_element.option.remove.option_selector,effective_date:"
+msgid "Effective Date"
+msgstr "Date d'effet"
 
 msgctxt ""
 "field:contract.covered_element.option.remove.option_selector,end_date:"
@@ -239,11 +260,6 @@ msgctxt ""
 "field:contract.covered_element.option.remove.option_selector,sub_status:"
 msgid "Sub Status"
 msgstr "Sous Statut"
-
-msgctxt ""
-"field:contract.covered_element.option.remove.option_selector,to_remove:"
-msgid "To Remove"
-msgstr "A résilier"
 
 msgctxt "field:endorsement,application_date_str:"
 msgid "Application Date"
@@ -775,6 +791,21 @@ msgstr "Elément couvert"
 msgctxt "model:endorsement.option.selector,name:"
 msgid "Option Selector"
 msgstr "Garantie"
+
+msgctxt ""
+"selection:contract.covered_element.option.remove.option_selector,action:"
+msgid ""
+msgstr " "
+
+msgctxt ""
+"selection:contract.covered_element.option.remove.option_selector,action:"
+msgid "Terminate"
+msgstr "Résilier"
+
+msgctxt ""
+"selection:contract.covered_element.option.remove.option_selector,action:"
+msgid "Void"
+msgstr "Sans Effet"
 
 msgctxt "selection:endorsement.contract.covered_element,action:"
 msgid "Add"
